--- a/cl_edits.ipynb
+++ b/cl_edits.ipynb
@@ -52,16 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -109,13 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "root\n",
+      " |-- year: string (nullable = true)\n",
+      " |-- cpi: float (nullable = true)\n",
+      "\n",
       "+----+---+-----+----+\n",
       "|year|cpi|month|date|\n",
       "+----+---+-----+----+\n",
@@ -127,32 +124,38 @@
       "+----+---+-----+----+\n",
       "only showing top 5 rows\n",
       "\n",
-      "+----+---+---+---+---+---+---+---+---+---+---+---+---+-----------------------+\n",
-      "|year|jan|feb|mar|apr|may|jun|jul|aug|sep|oct|nov|dec|avg_unemp_rate_per_year|\n",
-      "+----+---+---+---+---+---+---+---+---+---+---+---+---+-----------------------+\n",
-      "|1948|3.4|3.8|4.0|3.9|3.5|3.6|3.6|3.9|3.8|3.7|3.8|4.0|                   3.75|\n",
-      "|1949|4.3|4.7|5.0|5.3|6.1|6.2|6.7|6.8|6.6|7.9|6.4|6.6|                   6.05|\n",
-      "|1950|6.5|6.4|6.3|5.8|5.5|5.4|5.0|4.5|4.4|4.2|4.2|4.3|              5.2083335|\n",
-      "|1951|3.7|3.4|3.4|3.1|3.0|3.2|3.1|3.1|3.3|3.5|3.5|3.1|              3.2833333|\n",
-      "|1952|3.2|3.1|2.9|2.9|3.0|3.0|3.2|3.4|3.1|3.0|2.8|2.7|                  3.025|\n",
-      "+----+---+---+---+---+---+---+---+---+---+---+---+---+-----------------------+\n",
+      "+----+------------------+\n",
+      "|year|          avg(cpi)|\n",
+      "+----+------------------+\n",
+      "|1953|26.766666571299236|\n",
+      "|1957|28.091666380564373|\n",
+      "|1987|           113.625|\n",
+      "|1956|27.183333079020183|\n",
+      "|1936|13.866666634877523|\n",
+      "+----+------------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# rename cols in both files\n",
+    "from pyspark.sql.functions import col,avg\n",
+    "# rename cols in cpi df\n",
     "\n",
     "for column in cpi_df.columns: \n",
     "  cpi_df = cpi_df.withColumnRenamed(column, column.lower())\n",
     "\n",
     "cpi_df = cpi_df.withColumnRenamed('yearmon', 'year')\n",
     "\n",
-    "cpi_df = cpi_df.withColumn(\"month\", sf.split(sf.col('year'), \"-\").getItem(0))\\\n",
+    "# split year column into month, date, year columns\n",
+    "split_cpi_df = cpi_df.withColumn(\"month\", sf.split(sf.col('year'), \"-\").getItem(0))\\\n",
     "              .withColumn('date', sf.split(sf.col('year'), \"-\").getItem(1))\\\n",
     "              .withColumn('year', sf.split(sf.col('year'), \"-\").getItem(2))\n",
     "\n",
+    "# cast year col to int for groupby method\n",
+    "# cpi_df = cpi_df.withColumn('year', sf.col('year').cast('int'))\n",
+    "\n",
+    "# rename cols in unemployment df\n",
     "for column in unemp_df.columns: \n",
     "  unemp_df = unemp_df.withColumnRenamed(column, column.lower())\n",
     "\n",
@@ -160,12 +163,22 @@
     "udf_avg = sf.udf(lambda array: sum(array)/len(array))\n",
     "unemp_df = unemp_df.withColumn(\"avg_unemp_rate_per_year\", udf_avg(sf.array('Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec')).cast('float'))\n",
     "\n",
-    "# # calculate avg inflation rate per year\n",
-    "# cpi_df = cpi_df.groupBy('year').withColumn('avg_CPI_per_', sf.avg(sf.col('CPI')))\n",
+    "# calculate avg inflation rate per year\n",
+    "avg_cpi_df = split_cpi_df.groupBy(sf.col('year')) \\\n",
+    "                .agg(sf.avg(sf.col('cpi')))\n",
     "\n",
-    "cpi_df.show(5)\n",
-    "unemp_df.show(5)"
+    "# avg_cpi_df.show(truncate=False)\n",
+    "cpi_df.printSchema()\n",
+    "split_cpi_df.show(5)\n",
+    "avg_cpi_df.show(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -194,46 +207,76 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>year</th>\n",
-       "      <th>avg_unemp_per_year</th>\n",
+       "      <th>cpi</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1948</td>\n",
-       "      <td>3.750000</td>\n",
+       "      <td>1913</td>\n",
+       "      <td>9.883333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1949</td>\n",
-       "      <td>6.050000</td>\n",
+       "      <td>1914</td>\n",
+       "      <td>10.016667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1950</td>\n",
-       "      <td>5.208333</td>\n",
+       "      <td>1915</td>\n",
+       "      <td>10.108333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1951</td>\n",
-       "      <td>3.283333</td>\n",
+       "      <td>1916</td>\n",
+       "      <td>10.883333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1952</td>\n",
-       "      <td>3.025000</td>\n",
+       "      <td>1917</td>\n",
+       "      <td>12.825000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1918</td>\n",
+       "      <td>15.041667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1919</td>\n",
+       "      <td>17.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1920</td>\n",
+       "      <td>20.041667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1921</td>\n",
+       "      <td>17.850000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1922</td>\n",
+       "      <td>16.750000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   year  avg_unemp_per_year\n",
-       "0  1948            3.750000\n",
-       "1  1949            6.050000\n",
-       "2  1950            5.208333\n",
-       "3  1951            3.283333\n",
-       "4  1952            3.025000"
+       "   year        cpi\n",
+       "0  1913   9.883333\n",
+       "1  1914  10.016667\n",
+       "2  1915  10.108333\n",
+       "3  1916  10.883333\n",
+       "4  1917  12.825000\n",
+       "5  1918  15.041667\n",
+       "6  1919  17.333333\n",
+       "7  1920  20.041667\n",
+       "8  1921  17.850000\n",
+       "9  1922  16.750000"
       ]
      },
      "execution_count": 36,
@@ -262,7 +305,7 @@
     "avg_cpi_per_year = avg_cpi_per_year.reset_index()\n",
     "\n",
     "avg_unemp_per_year.head(5)\n",
-    "# avg_cpi_per_year.head(10)\n",
+    "avg_cpi_per_year.head(10)\n",
     "# unemp.dtypes\n"
    ]
   },
