working through 403 error.

--- a/phil_nb.ipynb
+++ b/phil_nb.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG][2023-02-15 00:43:23,199][456184002:0069] : Creating bigquery client\n",
-      "[INFO ][2023-02-15 00:43:23,209][456184002:0071] : Setup Completed\n"
+      "[DEBUG][2023-02-15 09:04:21,430][2444767410:0069] : Creating bigquery client\n",
+      "[INFO ][2023-02-15 09:04:21,449][2444767410:0071] : Setup Completed\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
     "    key_path, scopes=[\"https://www.googleapis.com/auth/cloud-platform\"],\n",
     ")\n",
     "\n",
-    "client = bigquery.Client(credentials=credentials, project=credentials.project_id,)\n",
+    "client = bigquery.Client(credentials=credentials, project=credentials.project_id)\n",
     "\n",
     "\n",
     "# **** SETUP ****\n",
@@ -80,8 +80,8 @@
     "    level=logging.INFO,\n",
     "    stream=sys.stdout\n",
     ")\n",
-    "logger: logging.Logger = logging.getLogger('root')      # alias the root logger as `logger`\n",
-    "logger.setLevel(logging.DEBUG)                          # programmatically reassign the logging level\n",
+    "logger: logging.Logger = logging.getLogger('root')     \n",
+    "logger.setLevel(logging.DEBUG)                         \n",
     "\n",
     "logger.debug(f\"Creating bigquery client\")\n",
     "\n",
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-02-15 00:43:23,880][3726965278:0016] : loaded 68868 rows from ./data/tornadoes.csv\n"
+      "[INFO ][2023-02-15 09:04:23,511][3726965278:0016] : loaded 68868 rows from ./data/tornadoes.csv\n"
      ]
     },
     {
@@ -481,14 +481,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-02-15 00:43:24,023][2866547761:0017] : Dropped columns.\n"
+      "[INFO ][2023-02-15 09:04:24,080][2866547761:0017] : Dropped columns.\n"
      ]
     },
     {
@@ -658,7 +658,7 @@
        "4  32.42  -89.13   0.00    0.0   2.0   37  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,14 +687,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO ][2023-02-15 00:43:24,232][2164801676:0025] : Renamed columns.\n"
+      "[INFO ][2023-02-15 09:04:24,352][2164801676:0025] : Renamed columns.\n"
      ]
     },
     {
@@ -871,7 +871,7 @@
        "4        -89.13     0.00      0.0     2.0     37  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1164,7 @@
        "4        -89.13     0.00      0.0     2.0     37  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1175,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/philiprobertovich/.creds/team-week3.json'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
