--- a/cl_edits.ipynb
+++ b/cl_edits.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,20 @@
       "root\n",
       " |-- year: string (nullable = true)\n",
       " |-- cpi: float (nullable = true)\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "+----+---+-----+----+\n",
       "|year|cpi|month|date|\n",
       "+----+---+-----+----+\n",
@@ -123,9 +136,22 @@
       "|1913|9.7|   01|  05|\n",
       "+----+---+-----+----+\n",
       "only showing top 5 rows\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 92:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "+----+------------------+\n",
-      "|year|          avg(cpi)|\n",
+      "|year|  avg_cpi_per_year|\n",
       "+----+------------------+\n",
       "|1953|26.766666571299236|\n",
       "|1957|28.091666380564373|\n",
@@ -135,6 +161,13 @@
       "+----+------------------+\n",
       "only showing top 5 rows\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -165,20 +198,13 @@
     "\n",
     "# calculate avg inflation rate per year\n",
     "avg_cpi_df = split_cpi_df.groupBy(sf.col('year')) \\\n",
-    "                .agg(sf.avg(sf.col('cpi')))\n",
+    "                .agg(sf.avg(sf.col('cpi')).alias('avg_cpi_per_year'))\n",
     "\n",
     "# avg_cpi_df.show(truncate=False)\n",
     "cpi_df.printSchema()\n",
     "split_cpi_df.show(5)\n",
     "avg_cpi_df.show(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -341,6 +367,8 @@
     "avg_emp_schema = [\n",
     "    bigquery.SchemaField(\"year\", \"INT\", mode=\"REQUIRED\"),\n",
     "    bigquery.SchemaField(\"avg_cpi_per_year\", \"FLOAT\", mode=\"REQUIRED\")]\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
