create dataset on bq

--- a/cl_edits.ipynb
+++ b/cl_edits.ipynb
@@ -337,28 +337,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully created a BiqQuery client\n",
+      "Project: team-week-3\n",
+      "Created dataset team-week-3.inflation_unemployment\n"
+     ]
+    }
+   ],
    "source": [
     "from google.cloud import bigquery\n",
-    "\n",
-    "# create bigquery client\n",
-    "client = bigquery.Client()\n",
+    "from google.oauth2 import service_account\n",
     "\n",
     "# create full table id\n",
     "project_id = \"team-week-3\"\n",
-    "dataset_id = \"tech_stocks_world_events\"\n",
+    "dataset_id = \"inflation-unemployment\"\n",
     "\n",
     "cpi_table_name = \"cpi_rates\"\n",
     "unemp_table_name = \"unemployment_rates\"\n",
     "\n",
-    "# table_id = f\"{project_id}.{dataset_id}.{table_name}\"\n",
-    "\n",
-    "\n",
     "# create bigquery client\n",
-    "client = bigquery.Client()\n",
+    "key_path = os.path.expanduser(\"/home/chloe_ycl/.creds/team-week-3.json\")\n",
+    "credentials = service_account.Credentials.from_service_account_file(key_path, \n",
+    "                                                              scopes=[\"https://www.googleapis.com/auth/cloud-platform\"])\n",
     "\n",
+    "client = bigquery.Client(credentials=credentials, project=credentials.project_id)\n",
+    "\n",
+    "print(\"Successfully created a BiqQuery client\")\n",
+    "print(f\"Project: {client.project}\")\n",
+    "\n",
+    "# create dataset\n",
+    "dataset_id = \"{}.inflation_unemployment\".format(client.project)\n",
+    "\n",
+    "#construct dataset obj to send to API\n",
+    "dataset = bigquery.Dataset(dataset_id)\n",
+    "\n",
+    "#specify the location\n",
+    "dataset.location = \"US\"\n",
+    "\n",
+    "dataset = client.create_dataset(dataset, timeout=30) #Make an API request\n",
+    "print(\"Created dataset {}.{}\".format(client.project, dataset.dataset_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# create our own bigquery schema\n",
     "avg_cpi_schema = [\n",
     "    bigquery.SchemaField(\"year\", \"INT\", mode=\"REQUIRED\"),\n",
@@ -366,11 +397,7 @@
     "\n",
     "avg_emp_schema = [\n",
     "    bigquery.SchemaField(\"year\", \"INT\", mode=\"REQUIRED\"),\n",
-    "    bigquery.SchemaField(\"avg_cpi_per_year\", \"FLOAT\", mode=\"REQUIRED\")]\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    bigquery.SchemaField(\"avg_cpi_per_year\", \"FLOAT\", mode=\"REQUIRED\")]"
    ]
   }
  ],
