reverting away from spark code to pandas

--- a/dsa-airflow/dags/rg_work_test.ipynb
+++ b/dsa-airflow/dags/rg_work_test.ipynb
@@ -53,6 +53,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "from google.cloud import bigquery\n",
+    "from google.oauth2 import service_account\n",
+    "from google.cloud.exceptions import NotFound\n",
+    "import os\n",
+    "\n",
+    "data_dir = '../data'\n",
+    "\n",
+    "file_names = ['AAPL','ADBE','AMZN', 'CRM', 'CSCO', 'GOOGL', 'IBM','INTC','META','MSFT','NFLX','NVDA','ORCL','TSLA'] #excluded AAPL to start df\n",
+    "    \n",
+    "old_names = ['Date','Open','High','Low','Close','Adj Close','Volume']\n",
+    "new_names = ['date', 'open', 'high', 'low', 'close', 'adj_close', 'volume']\n",
+    "    \n",
+    "rename_dict = {item[0]:item[1] for item in zip(old_names,new_names)}\n",
+    "\n",
+    "li = []\n",
+    "\n",
+    "for file in file_names:\n",
+    "    idf = pd.read_csv(os.path.join(data_dir,f'{file}.csv'),header=0)\n",
+    "    \n",
+    "    idf = idf.rename(columns=rename_dict)\n",
+    "    \n",
+    "    idf.insert(0,'stock_name', file)\n",
+    "    \n",
+    "    idf.insert(0,'sd_id', idf['stock_name']+idf['date'].astype(str))\n",
+    "    \n",
+    "    li.append(idf)\n",
+    "\n",
+    "df = pd.concat(li, axis=0)\n",
+    "\n",
+    "df.to_parquet(os.path.join(data_dir,'all_stocks.parquet'))\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
