--- a/cl_edits.ipynb
+++ b/cl_edits.ipynb
@@ -52,9 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -102,48 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- year: string (nullable = true)\n",
-      " |-- cpi: float (nullable = true)\n",
-      "\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----+---+-----+----+\n",
-      "|year|cpi|month|date|\n",
-      "+----+---+-----+----+\n",
-      "|1913|9.8|   01|  01|\n",
-      "|1913|9.8|   01|  02|\n",
-      "|1913|9.8|   01|  03|\n",
-      "|1913|9.8|   01|  04|\n",
-      "|1913|9.7|   01|  05|\n",
-      "+----+---+-----+----+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 92:>                                                         (0 + 1) / 1]\r"
      ]
     },
     {
@@ -160,14 +133,18 @@
       "|1936|13.866666634877523|\n",
       "+----+------------------+\n",
       "only showing top 5 rows\n",
+      "\n",
+      "+----+---+---+---+---+---+---+---+---+---+---+---+---+-----------------------+\n",
+      "|year|jan|feb|mar|apr|may|jun|jul|aug|sep|oct|nov|dec|avg_unemp_rate_per_year|\n",
+      "+----+---+---+---+---+---+---+---+---+---+---+---+---+-----------------------+\n",
+      "|1948|3.4|3.8|4.0|3.9|3.5|3.6|3.6|3.9|3.8|3.7|3.8|4.0|                   3.75|\n",
+      "|1949|4.3|4.7|5.0|5.3|6.1|6.2|6.7|6.8|6.6|7.9|6.4|6.6|                   6.05|\n",
+      "|1950|6.5|6.4|6.3|5.8|5.5|5.4|5.0|4.5|4.4|4.2|4.2|4.3|              5.2083335|\n",
+      "|1951|3.7|3.4|3.4|3.1|3.0|3.2|3.1|3.1|3.3|3.5|3.5|3.1|              3.2833333|\n",
+      "|1952|3.2|3.1|2.9|2.9|3.0|3.0|3.2|3.4|3.1|3.0|2.8|2.7|                  3.025|\n",
+      "+----+---+---+---+---+---+---+---+---+---+---+---+---+-----------------------+\n",
+      "only showing top 5 rows\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
      ]
     }
    ],
@@ -201,116 +178,51 @@
     "                .agg(sf.avg(sf.col('cpi')).alias('avg_cpi_per_year'))\n",
     "\n",
     "# avg_cpi_df.show(truncate=False)\n",
-    "cpi_df.printSchema()\n",
-    "split_cpi_df.show(5)\n",
-    "avg_cpi_df.show(5)"
+    "avg_cpi_df.show(5)\n",
+    "unemp_df.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>cpi</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1913</td>\n",
-       "      <td>9.883333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1914</td>\n",
-       "      <td>10.016667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1915</td>\n",
-       "      <td>10.108333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1916</td>\n",
-       "      <td>10.883333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1917</td>\n",
-       "      <td>12.825000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1918</td>\n",
-       "      <td>15.041667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1919</td>\n",
-       "      <td>17.333333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1920</td>\n",
-       "      <td>20.041667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1921</td>\n",
-       "      <td>17.850000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1922</td>\n",
-       "      <td>16.750000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   year        cpi\n",
-       "0  1913   9.883333\n",
-       "1  1914  10.016667\n",
-       "2  1915  10.108333\n",
-       "3  1916  10.883333\n",
-       "4  1917  12.825000\n",
-       "5  1918  15.041667\n",
-       "6  1919  17.333333\n",
-       "7  1920  20.041667\n",
-       "8  1921  17.850000\n",
-       "9  1922  16.750000"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   year  avg_unemp_per_year\n",
+      "0  1948            3.750000\n",
+      "1  1949            6.050000\n",
+      "2  1950            5.208333\n",
+      "3  1951            3.283333\n",
+      "4  1952            3.025000\n",
+      "year                    int64\n",
+      "avg_unemp_per_year    float64\n",
+      "dtype: object\n",
+      "   year        cpi\n",
+      "0  1913   9.883333\n",
+      "1  1914  10.016667\n",
+      "2  1915  10.108333\n",
+      "3  1916  10.883333\n",
+      "4  1917  12.825000\n",
+      "5  1918  15.041667\n",
+      "6  1919  17.333333\n",
+      "7  1920  20.041667\n",
+      "8  1921  17.850000\n",
+      "9  1922  16.750000\n",
+      "year      int64\n",
+      "cpi     float64\n",
+      "dtype: object\n"
+     ]
     }
    ],
    "source": [
+    "data_dir = 'dsa-airflow/data'\n",
+    "\n",
+    "cpi_file = 'US-CPI.csv'\n",
+    "unemp_file = 'USUnemployment.csv'\n",
+    "\n",
     "# read and rename cpi file / parse_dates=['Yearmon']\n",
     "cpi  = pd.read_csv(os.path.join(data_dir, cpi_file), header=0)\n",
     "cpi = cpi.rename(columns={'Yearmon': 'year', 'CPI': 'cpi'})\n",
@@ -329,15 +241,18 @@
     "# calculate the avg yearly cpi rate\n",
     "avg_cpi_per_year = cpi.groupby('year').mean('cpi')\n",
     "avg_cpi_per_year = avg_cpi_per_year.reset_index()\n",
+    "avg_cpi_per_year['year'] = avg_cpi_per_year['year'].astype('int')\n",
     "\n",
-    "avg_unemp_per_year.head(5)\n",
-    "avg_cpi_per_year.head(10)\n",
+    "print(avg_unemp_per_year.head(5))\n",
+    "print(avg_unemp_per_year.dtypes)\n",
+    "print(avg_cpi_per_year.head(10))\n",
+    "print(avg_cpi_per_year.dtypes)\n",
     "# unemp.dtypes\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -355,11 +270,8 @@
     "from google.oauth2 import service_account\n",
     "\n",
     "# create full table id\n",
-    "project_id = \"team-week-3\"\n",
-    "dataset_id = \"inflation-unemployment\"\n",
-    "\n",
-    "cpi_table_name = \"cpi_rates\"\n",
-    "unemp_table_name = \"unemployment_rates\"\n",
+    "PROJECT_ID = \"team-week-3\"\n",
+    "DATASET_ID = \"inflation_unemployment\"\n",
     "\n",
     "# create bigquery client\n",
     "key_path = os.path.expanduser(\"/home/chloe_ycl/.creds/team-week-3.json\")\n",
@@ -380,24 +292,70 @@
     "#specify the location\n",
     "dataset.location = \"US\"\n",
     "\n",
-    "dataset = client.create_dataset(dataset, timeout=30) #Make an API request\n",
+    "dataset = client.create_dataset(dataset, timeout=30, exists_ok=True) #Make an API request\n",
     "print(\"Created dataset {}.{}\".format(client.project, dataset.dataset_id))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create our own bigquery schema\n",
-    "avg_cpi_schema = [\n",
-    "    bigquery.SchemaField(\"year\", \"INT\", mode=\"REQUIRED\"),\n",
-    "    bigquery.SchemaField(\"avg_cpi_per_year\", \"FLOAT\", mode=\"REQUIRED\")]\n",
+    "# funtion to load table from dataframes\n",
     "\n",
-    "avg_emp_schema = [\n",
-    "    bigquery.SchemaField(\"year\", \"INT\", mode=\"REQUIRED\"),\n",
-    "    bigquery.SchemaField(\"avg_cpi_per_year\", \"FLOAT\", mode=\"REQUIRED\")]"
+    "def load_table(\n",
+    "    df: pd.DataFrame, \n",
+    "    client: bigquery.Client, \n",
+    "    table_name: str, \n",
+    "    schema: bigquery.SchemaField,\n",
+    "    create_disposition: str = 'CREATE_IF_NEEDED', \n",
+    "    write_disposition: str = 'WRITE_TRUNCATE'\n",
+    "    ) -> None:\n",
+    "    \n",
+    "    job_config = bigquery.LoadJobConfig(\n",
+    "        create_disposition=create_disposition,\n",
+    "        write_disposition=write_disposition,\n",
+    "        schema=schema\n",
+    "    )\n",
+    "    \n",
+    "    job = client.load_table_from_dataframe(df, destination=table_name, job_config=job_config)\n",
+    "    job.result()        # wait for the job to finish\n",
+    "\n",
+    "\n",
+    "\n",
+    "# create our own bigquery schema\n",
+    "CPI_METADATA = {\n",
+    "    'cpi_rates': {\n",
+    "        'table_name': 'cpi_rates',\n",
+    "        'schema' : [\n",
+    "            bigquery.SchemaField(\"year\", \"INTEGER\", mode=\"REQUIRED\"),\n",
+    "            bigquery.SchemaField(\"cpi\", \"FLOAT\", mode=\"REQUIRED\")]\n",
+    "    }}\n",
+    "\n",
+    "UNEMP_METADATA = {\n",
+    "    'unemployment_rates' :{\n",
+    "        'table_name': 'unemployment_rates',\n",
+    "        'schema': [\n",
+    "            bigquery.SchemaField(\"year\", \"INTEGER\", mode=\"REQUIRED\"),\n",
+    "            bigquery.SchemaField(\"avg_unemp_per_year\", \"FLOAT\", mode=\"REQUIRED\")]\n",
+    "    }}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load to bq\n",
+    "table_name = f\"{PROJECT_ID}.{DATASET_ID}.{CPI_METADATA['cpi_rates']['table_name']}\"\n",
+    "schema = CPI_METADATA['cpi_rates']['schema']\n",
+    "load_table(avg_cpi_per_year, client, table_name, schema)\n",
+    "\n",
+    "table_name = f\"{PROJECT_ID}.{DATASET_ID}.{UNEMP_METADATA['unemployment_rates']['table_name']}\"\n",
+    "schema = UNEMP_METADATA['unemployment_rates']['schema']\n",
+    "load_table(avg_unemp_per_year, client, table_name, schema)"
    ]
   }
  ],
