query stock file from bq and save as csv

--- a/cl_edits.ipynb
+++ b/cl_edits.ipynb
@@ -4,38 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "your 131072x1 screen size is bogus. expect trouble\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/02/14 17:01:38 WARN Utils: Your hostname, DESKTOP-SU1U0NI resolves to a loopback address: 127.0.1.1; using 172.21.244.112 instead (on interface eth0)\n",
-      "23/02/14 17:01:38 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/02/14 17:01:41 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import pyspark\n",
@@ -45,7 +14,7 @@
     "import pyspark.sql.types as st          # st = spark types\n",
     "import datetime as dt\n",
     "\n",
-    "spark = SparkSession.builder.master('local').getOrCreate()\n",
+    "# spark = SparkSession.builder.master('local').getOrCreate()\n",
     "\n",
     "# spark = SparkSession.builder.getOrCreate()"
    ]
@@ -184,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,6 +325,29 @@
     "table_name = f\"{PROJECT_ID}.{DATASET_ID}.{UNEMP_METADATA['unemployment_rates']['table_name']}\"\n",
     "schema = UNEMP_METADATA['unemployment_rates']['schema']\n",
     "load_table(avg_unemp_per_year, client, table_name, schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# query Stock file from bq\n",
+    "STOCK_DATASET_ID = 'tech_stocks_world_events'\n",
+    "\n",
+    "stocks = f\"\"\" SELECT * FROM {PROJECT_ID}.{STOCK_DATASET_ID}.stocks \"\"\"\n",
+    "\n",
+    "result = client.query(stocks)\n",
+    "\n",
+    "# read to dataframe\n",
+    "df = result.to_dataframe()\n",
+    "\n",
+    "# read to csv file\n",
+    "df.to_csv(os.path.join(data_dir, 'stocks.csv'), header=True)\n",
+    "\n",
+    "# print(stocks_df.dtypes)\n",
+    "# stocks_df\n"
    ]
   }
  ],
